Update and rename 3.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <p style="font-size: 23px; text-align: center;" id="watch">
 
-    作者： ganpao
-    出版社：ganpao
+    作者： zhoai
+    出版社：zhoai
     出版日期：2020/02/27
     語言：繁體中文
 
