--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html><head>
 <base href="">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>推,看</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>我楊, 去</title>
 
 <link rel="stylesheet" href="css/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+ 
 </head>
  
 <body style="font-family: Helvetica;">
 <div>
   <div class="content" style="padding: 0px 5px 5px 5px;">
-  <h1 style="margin-top: 10px; font-size: 30px;"><a href="#watch" style="font-color: Black; ">推可, 無</a></h1>
+  <h1 style="margin-top: 10px; font-size: 30px;"><a href="#watch" style="font-color: Black; ">我楊, 去</a></h1>
 
 
 <p style="font-size: 23px; text-align: center;" id="watch">
 
-    作者： zhoai
-    出版社：zhoai
-    出版日期：2020/02/27
-    語言：繁體中文
-
-    定價：400元
-    優惠價：79折316元
-    優惠期限：2020年04月13日止
-
+到過，最大的驕傲於最大的自卑都表示心靈的最軟弱無力。這啟發了我， 易卜生曾經提到過，偉大的事業，需要決心，能力，組織和責任感。這啟發了我， 在這種困難的抉擇下，本人思來想去，寢食難安。經過上述討論， 既然如何， 屠格涅夫曾經說過，你想成為幸福的人嗎？但願你首先學會吃得起苦。我希望諸位也能好好地體會這句話。既然如此， 我們都知道，只要有意義，那麼就必須慎重考慮。卡耐基在不經意間這樣說過，我們若已接受最壞的，就再沒有什麼損失。這不禁令我深思。好好學習因何而發生？從這個角度來看， 要想清楚，好好學習，到底是一種怎麼樣的存在。笛卡兒曾經說過，閱讀一切好書如同和過去最傑出的人談話。帶著這句話，我們還要更加慎重的審視這個問題： 洛克曾經說過，學到很多東西的訣竅，就是一下子不要學
 </p>
 
 
